== 1.3

Introduced AutoC::String string type.

== 1.2

Introduced counted reference type AutoC::Reference.

Introduced type capabilities/restrictions and optional operations for collections.

Made AutoC::Vector#sort() an optional operation.

== 1.1

Fixed online documentation generation issues.

== 1.0

Initial release of version 1.